src/objects/Line_Item__c.object
<CustomObject>
    <customHelpPage>Line_Item_Help_Page</customHelpPage>
    <description>It refers to a line in the invoice</description>
    <fields>
        <fullName>Discounted_Price__c</fullName>
        <description>The price of a unit of an item.</description>
        <label>Discounted Price</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Liine Items</relationshipLabel>
        <relationshipName>Liine_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Merchandise__c</fullName>
        <label>Merchandise</label>
        <referenceTo>Merchandise__c</referenceTo>
        <relationshipLabel>Liine Items</relationshipLabel>
        <relationshipName>Liine_Items</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>The quantity of a particular merchandise.</description>
        <inlineHelpText>It tells about the quantity of the merchandise used.</inlineHelpText>
        <label>Quantity</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <description>The total price of the item purchased</description>
        <formula>Quantity__c * Discounted_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Line Item</label>
    <nameField>
        <label>Line Item Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Liine Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>No_Invalid_Quantities</fullName>
        <active>true</active>
        <description>This rules restricts the order of invalid quantities, which is either less than 0 or more than available.</description>
        <errorConditionFormula>(Quantity__c &lt;= 0) ||
(Quantity__c &gt;= Merchandise__r.Quantity__c)</errorConditionFormula>
        <errorDisplayField>Quantity__c</errorDisplayField>
        <errorMessage>Order should not be more than available or less than one.</errorMessage>
    </validationRules>
</CustomObject>